--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <!-- Custom Theme files -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="keywords" content="Happy New year Newsletter templates, Email Templates, Newsletters, Marketing  templates, 
-        Advertising templates, free Newsletter">
+    <meta name="keywords" content="">
         <!--style-->
             <style type="text/css">
                 body{
